fixed border, alignment, and justification

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,10 +50,12 @@ h1 {
 }
 
 h2 {
+  border-right: var(--dark);
   font-size: 7.5rem;
   font-family: "futura-pt-condensed",sans-serif;
   -webkit-font-feature-settings: "salt" 2;
   font-feature-settings: "salt" 2;
+  text-align: right;
 }
 
 h3 {
@@ -176,7 +178,7 @@ footer {
 
 /* STYLE ALL SECTION TAGS */
 section {
-  margin: 0 auto;
+  margin: var(--spacing-one);
 }
 
 /* HERO STYLES START */
@@ -232,15 +234,17 @@ section {
 /* SECTION TITLE STYLES START */
 .section-title {
   display: flex;
-  width: fit-content;
+  width: auto;
   height: auto;
+  min-height: inherit;
+  align-self: stretch;
   flex-wrap: wrap;
   flex-direction: column;
   color: var(--dark);
   text-orientation: upright;
   writing-mode: vertical-lr;
   margin-left: auto;
-  place-self: flex-end;
+  place-content: flex-end;
 }
 
 .section-subtitle {
@@ -255,12 +259,10 @@ section {
 
 .primary-border {
   border-color: var(--dark);
-  border-left: 0.5rem solid;
+  border-right: 0.25rem solid;
+  height: inherit;
 }
 
-.secondary-border {
-  border-color: var(--tertiary-color);
-}
 /* SECTION TITLE STYLES END */
 
 /* ABOUT */
@@ -276,9 +278,7 @@ section {
 .about-container {
   position: relative;
   width: fit-content;
-  display: flex;
-  flex-wrap: wrap;
-  place-content: center space-between;
+  place-content: stretch center;
   padding-left: var(--spacing-five);
   padding-right: var(--spacing-five);
 }
@@ -298,16 +298,17 @@ section {
   text-align: start;
 }
 
-.about-content h3,
-h4,
-ul,
-p,
-a {
+.text-container h3,
+.text-container h4,
+.text-container ul,
+.text-container p,
+.text-container a {
   color: var(--dark);
   line-height: 1.25;
   display: flex;
   width: 100%;
-  flex: 0 0 calc(100% * 5 / 12 - 0.5%);
+  height: stretch;
+  flex: 1 0 calc(100% * 5 / 12 - 0.5%);
   flex-direction: column;
   flex-wrap: wrap;
   text-align: start;
@@ -321,12 +322,11 @@ a {
 }
 
 .image-container {
-  place-content: start space-between;
   position: relative;
   vertical-align: top;
   display: flex;
   flex: 1 0 calc(100% * 5 / 12 - 0.5%);
-  width: fit-content;
+  width: 75%;
   height: auto;
   flex-wrap: wrap;
   flex-direction: column;
@@ -336,7 +336,6 @@ a {
   top: 0;
   vertical-align: top;
   display: flex;
-  width: fit-content;
   height: fit-content;
   flex: 1 0 calc(100% * 5 / 12 - 0.5%);
   flex-direction: column;
@@ -351,13 +350,9 @@ a {
 .about-image {
   display: flex;
   flex-wrap: wrap;
-  flex: 1 0 calc(100% * 5 / 12 - 0.5%);
-}
-
-.about-image img {
-  width: 75%;
+  width: fit-content;
   max-width: 100%;
-  height: auto;
+  height: 100%;
 }
 
 .art-courses {
